--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
 
 
     <EditText
-        android:id="@+id/login_email"
+        android:id="@+id/login_userName"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:ems="10"
@@ -25,7 +25,7 @@
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_email" />
+        app:layout_constraintTop_toBottomOf="@+id/login_userName" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/LoginToolBar"
