--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,6 +7,14 @@
     tools:context=".LoginActivity">
 
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/login_page_background"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
+
     <EditText
         android:id="@+id/login_userName"
         android:layout_width="300dp"
@@ -14,8 +22,9 @@
         android:ems="10"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="270dp" />
+        tools:layout_editor_absoluteY="412dp" />
 
     <EditText
         android:id="@+id/login_password"
@@ -24,41 +33,51 @@
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_userName" />
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/LoginToolBar"
-        android:layout_width="1728dp"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/LoginToolBarText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Login Interface"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/LoginToolBar"
-        app:layout_constraintTop_toTopOf="@+id/LoginToolBar"
-        tools:layout_editor_absoluteX="16dp" />
+        tools:layout_editor_absoluteY="484dp" />
 
     <Button
         android:id="@+id/login_btn"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="184dp"
+        android:layout_marginBottom="132dp"
         android:text="LOG IN"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="369dp"
+        android:layout_height="48dp"
+        android:fontFamily="@font/ubuntu_bold"
+        android:text="University of Toronto"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
+        tools:layout_editor_absoluteX="21dp"
+        tools:layout_editor_absoluteY="104dp" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="369dp"
+        android:layout_height="48dp"
+        android:fontFamily="@font/ubuntu_bold"
+        android:text="Course Planner"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
+        tools:layout_editor_absoluteX="26dp"
+        tools:layout_editor_absoluteY="152dp" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="168dp"
+        android:layout_height="163dp"
+        app:srcCompat="@drawable/utoronto_coa"
+        tools:layout_editor_absoluteX="121dp"
+        tools:layout_editor_absoluteY="211dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
