--- a/app/src/main/res/layout/fragment_student_view.xml
+++ b/app/src/main/res/layout/fragment_student_view.xml
@@ -8,7 +8,7 @@
     tools:context=".StudentView">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/View_Background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/todo"
@@ -21,28 +21,47 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
-        android:id="@+id/imageView8"
+        android:id="@+id/Profile_Background"
         android:layout_width="215dp"
         android:layout_height="187dp"
+        android:layout_marginTop="20dp"
         android:src="@drawable/profile_frame"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="128dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/username_here" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/User_Welcome_Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="40dp"
         android:ems="10"
-        android:fontFamily="@font/ubuntu_bold"
+        android:fontFamily="@font/ubuntu_light"
         android:inputType="textPersonName"
         android:text="Welcome back,"
         android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
-        tools:layout_editor_absoluteX="21dp"
-        tools:layout_editor_absoluteY="27dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName3"
+        android:id="@+id/username_here"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="60dp"
+        android:ems="10"
+        android:fontFamily="@font/ubuntu_bold"
+        android:inputType="textPersonName"
+        android:text="Username"
+        android:textAlignment="viewStart"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/Courses_Wishlist"
         android:layout_width="338dp"
         android:layout_height="67dp"
         android:ems="10"
@@ -59,6 +78,7 @@
         android:id="@+id/editTextTextPersonName4"
         android:layout_width="196dp"
         android:layout_height="64dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:fontFamily="@font/ubuntu_bold"
         android:inputType="textPersonName"
@@ -66,41 +86,71 @@
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="22sp"
-        tools:layout_editor_absoluteX="215dp"
-        tools:layout_editor_absoluteY="128dp" />
+        app:layout_constraintTop_toBottomOf="@+id/username_here"
+        tools:layout_editor_absoluteX="215dp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/Generate_Table_Button"
         android:layout_width="132dp"
         android:layout_height="60dp"
+        android:background="#2d65c6"
         android:text="GENERATE TIMETABLE"
         app:iconTint="@color/light_blue_900"
-        android:background= "#2d65c6"
-    tools:layout_editor_absoluteX="139dp"
+        tools:layout_editor_absoluteX="139dp"
         tools:layout_editor_absoluteY="603dp" />
 
     <ScrollView
-        android:layout_width="403dp"
-        android:layout_height="9dp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
-        tools:layout_editor_absoluteX="7dp">
+        android:id="@+id/Course_Table"
+        android:layout_width="326dp"
+        android:layout_height="148dp"
+        app:layout_constraintBottom_toTopOf="@+id/Generate_Table_Button"
+        app:layout_constraintTop_toBottomOf="@+id/Courses_Wishlist"
+        app:layout_constraintVertical_bias="0.44"
+        tools:layout_editor_absoluteX="42dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+        </LinearLayout>
+    </ScrollView>
+
+    <ScrollView
+        android:id="@+id/Courses_Taken_Table"
+        android:layout_width="192dp"
+        android:layout_height="162dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/Profile_Background"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
     </ScrollView>
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/ubuntu_bold"
-        android:text="Username"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        tools:layout_editor_absoluteX="21dp"
-        tools:layout_editor_absoluteY="77dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
