--- a/app/src/main/res/layout/fragment_student_view.xml
+++ b/app/src/main/res/layout/fragment_student_view.xml
@@ -18,7 +18,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/Profile_Background"
@@ -38,6 +38,7 @@
         android:ems="10"
         android:fontFamily="@font/ubuntu_light"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         android:text="Welcome back,"
         android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
@@ -49,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="65dp"
         android:ems="10"
         android:fontFamily="@font/ubuntu_bold"
         android:inputType="textPersonName"
@@ -64,6 +65,7 @@
         android:id="@+id/Courses_Wishlist"
         android:layout_width="338dp"
         android:layout_height="67dp"
+        android:layout_marginTop="55dp"
         android:ems="10"
         android:fontFamily="@font/ubuntu_bold"
         android:inputType="textPersonName"
@@ -71,8 +73,9 @@
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
-        tools:layout_editor_absoluteX="36dp"
-        tools:layout_editor_absoluteY="363dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Profile_Background" />
 
     <EditText
         android:id="@+id/editTextTextPersonName4"
@@ -85,28 +88,33 @@
         android:text="COURSES TAKEN"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="22sp"
-        app:layout_constraintTop_toBottomOf="@+id/username_here"
-        tools:layout_editor_absoluteX="215dp" />
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/username_here" />
 
     <Button
         android:id="@+id/Generate_Table_Button"
         android:layout_width="132dp"
         android:layout_height="60dp"
-        android:background="#2d65c6"
+        android:layout_marginBottom="65dp"
+        android:background="#10217E"
         android:text="GENERATE TIMETABLE"
+        android:textColor="#FFFFFF"
         app:iconTint="@color/light_blue_900"
-        tools:layout_editor_absoluteX="139dp"
-        tools:layout_editor_absoluteY="603dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/View_Background"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ScrollView
         android:id="@+id/Course_Table"
         android:layout_width="326dp"
         android:layout_height="148dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintBottom_toTopOf="@+id/Generate_Table_Button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Courses_Wishlist"
-        app:layout_constraintVertical_bias="0.44"
-        tools:layout_editor_absoluteX="42dp">
+        app:layout_constraintVertical_bias="0.44">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -150,7 +158,32 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/textView13"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+        </LinearLayout>
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
