--- a/app/src/main/res/layout/fragment_student_view.xml
+++ b/app/src/main/res/layout/fragment_student_view.xml
@@ -25,9 +25,11 @@
         android:layout_width="215dp"
         android:layout_height="187dp"
         android:layout_marginTop="20dp"
+        android:contentDescription="Background image of the student and professor view page"
         android:src="@drawable/profile_frame"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username_here" />
+        app:layout_constraintTop_toBottomOf="@+id/username_here"
+        tools:ignore="ImageContrastCheck" />
 
     <EditText
         android:id="@+id/User_Welcome_Text"
@@ -43,7 +45,8 @@
         android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/username_here"
@@ -59,7 +62,8 @@
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/Courses_Wishlist"
@@ -69,13 +73,14 @@
         android:ems="10"
         android:fontFamily="@font/ubuntu_bold"
         android:inputType="textPersonName"
-        android:text="COURSE WISHLIST"
+        android:text="@string/course_wishlist"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Profile_Background" />
+        app:layout_constraintTop_toBottomOf="@+id/Profile_Background"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/editTextTextPersonName4"
@@ -85,12 +90,13 @@
         android:ems="10"
         android:fontFamily="@font/ubuntu_bold"
         android:inputType="textPersonName"
-        android:text="COURSES TAKEN"
+        android:text="@string/courses_taken"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username_here" />
+        app:layout_constraintTop_toBottomOf="@+id/username_here"
+        android:autofillHints="" />
 
     <Button
         android:id="@+id/Generate_Table_Button"
@@ -98,7 +104,7 @@
         android:layout_height="60dp"
         android:layout_marginBottom="65dp"
         android:background="#10217E"
-        android:text="GENERATE TIMETABLE"
+        android:text="@string/generate_timetable"
         android:textColor="#FFFFFF"
         app:iconTint="@color/light_blue_900"
         app:layout_constraintBottom_toBottomOf="@+id/View_Background"
@@ -125,25 +131,29 @@
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textColor="#EDE7F6" />
 
             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textColor="#EDE7F6" />
 
             <TextView
                 android:id="@+id/textView10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textColor="#EDE7F6" />
 
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textColor="#EDE7F6" />
         </LinearLayout>
     </ScrollView>
 
@@ -164,25 +174,29 @@
                 android:id="@+id/textView11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textColor="#EDE7F6" />
 
             <TextView
                 android:id="@+id/textView14"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textColor="#EDE7F6" />
 
             <TextView
                 android:id="@+id/textView13"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textColor="#EDE7F6" />
 
             <TextView
                 android:id="@+id/textView12"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textColor="#EDE7F6" />
         </LinearLayout>
     </ScrollView>
 
