--- a/app/src/main/res/layout/fragment_student_view.xml
+++ b/app/src/main/res/layout/fragment_student_view.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout"
+    android:layout_marginTop="?attr/actionBarSize"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".StudentView">
@@ -13,12 +14,11 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/todo"
         android:src="@drawable/user_view_background"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/Profile_Background"
@@ -37,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginTop="40dp"
+        android:autofillHints=""
         android:ems="10"
         android:fontFamily="@font/ubuntu_light"
         android:inputType="textPersonName"
@@ -45,8 +46,7 @@
         android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:autofillHints="" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/username_here"
@@ -54,6 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginTop="65dp"
+        android:autofillHints=""
         android:ems="10"
         android:fontFamily="@font/ubuntu_bold"
         android:inputType="textPersonName"
@@ -62,14 +63,14 @@
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:autofillHints="" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/Courses_Wishlist"
         android:layout_width="338dp"
         android:layout_height="67dp"
         android:layout_marginTop="55dp"
+        android:autofillHints=""
         android:ems="10"
         android:fontFamily="@font/ubuntu_bold"
         android:inputType="textPersonName"
@@ -79,14 +80,14 @@
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Profile_Background"
-        android:autofillHints="" />
+        app:layout_constraintTop_toBottomOf="@+id/Profile_Background" />
 
     <EditText
         android:id="@+id/editTextTextPersonName4"
         android:layout_width="196dp"
         android:layout_height="64dp"
         android:layout_marginTop="20dp"
+        android:autofillHints=""
         android:ems="10"
         android:fontFamily="@font/ubuntu_bold"
         android:inputType="textPersonName"
@@ -95,8 +96,7 @@
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username_here"
-        android:autofillHints="" />
+        app:layout_constraintTop_toBottomOf="@+id/username_here" />
 
     <Button
         android:id="@+id/Generate_Table_Button"
@@ -168,7 +168,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textView11"
