--- a/app/src/main/res/layout/fragment_student.xml
+++ b/app/src/main/res/layout/fragment_student.xml
@@ -6,7 +6,7 @@
     android:layout_marginTop="?attr/actionBarSize"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StudentView">
+    tools:context=".StudentFragment">
 
     <ImageView
         android:id="@+id/View_Background"
@@ -28,10 +28,10 @@
         android:contentDescription="Background image of the student and professor view page"
         android:src="@drawable/profile_frame"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username_here"
+        app:layout_constraintTop_toBottomOf="@+id/student_name"
         tools:ignore="ImageContrastCheck" />
 
-    <EditText
+    <TextView
         android:id="@+id/User_Welcome_Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,7 +40,6 @@
         android:autofillHints=""
         android:ems="10"
         android:fontFamily="@font/ubuntu_light"
-        android:inputType="textPersonName"
         android:minHeight="48dp"
         android:text="Welcome back,"
         android:textAlignment="viewStart"
@@ -48,8 +47,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/username_here"
+    <TextView
+        android:id="@+id/student_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
@@ -57,23 +56,20 @@
         android:autofillHints=""
         android:ems="10"
         android:fontFamily="@font/ubuntu_bold"
-        android:inputType="textPersonName"
-        android:text="Username"
         android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/Courses_Wishlist"
+    <TextView
+        android:id="@+id/text_wishlist"
         android:layout_width="338dp"
         android:layout_height="67dp"
         android:layout_marginTop="55dp"
         android:autofillHints=""
         android:ems="10"
         android:fontFamily="@font/ubuntu_bold"
-        android:inputType="textPersonName"
         android:text="@string/course_wishlist"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
@@ -82,29 +78,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Profile_Background" />
 
-    <EditText
-        android:id="@+id/editTextTextPersonName4"
+    <TextView
+        android:id="@+id/text_taken"
         android:layout_width="196dp"
         android:layout_height="64dp"
         android:layout_marginTop="20dp"
         android:autofillHints=""
         android:ems="10"
         android:fontFamily="@font/ubuntu_bold"
-        android:inputType="textPersonName"
         android:text="@string/courses_taken"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username_here" />
+        app:layout_constraintTop_toBottomOf="@+id/student_name" />
 
     <Button
-        android:id="@+id/Generate_Table_Button"
+        android:id="@+id/timeline"
         android:layout_width="132dp"
         android:layout_height="60dp"
         android:layout_marginBottom="65dp"
         android:background="#10217E"
-        android:text="@string/generate_timetable"
+        android:text="generate timeline"
         android:textColor="#FFFFFF"
         app:iconTint="@color/light_blue_900"
         app:layout_constraintBottom_toBottomOf="@+id/View_Background"
@@ -116,10 +111,10 @@
         android:layout_width="326dp"
         android:layout_height="148dp"
         android:layout_marginTop="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/Generate_Table_Button"
+        app:layout_constraintBottom_toTopOf="@+id/timeline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Courses_Wishlist"
+        app:layout_constraintTop_toBottomOf="@+id/text_wishlist"
         app:layout_constraintVertical_bias="0.44">
 
         <LinearLayout
@@ -163,7 +158,7 @@
         android:layout_height="162dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/Profile_Background"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4">
+        app:layout_constraintTop_toBottomOf="@+id/text_taken">
 
         <LinearLayout
             android:layout_width="match_parent"
