refactor: clean strings

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -79,9 +79,9 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="284dp"
-        android:autofillHints="@string/prompt_password"
-        android:hint="@string/prompt_password"
-        android:imeActionLabel="@string/action_sign_in_short"
+        android:autofillHints="Password"
+        android:hint="Password"
+        android:imeActionLabel="Sign in"
         android:imeOptions="actionDone"
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
