--- a/app/src/main/res/layout/fragment_student.xml
+++ b/app/src/main/res/layout/fragment_student.xml
@@ -12,7 +12,6 @@
         android:id="@+id/View_Background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/todo"
         android:src="@drawable/user_view_background"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -70,7 +69,7 @@
         android:autofillHints=""
         android:ems="10"
         android:fontFamily="@font/ubuntu_bold"
-        android:text="@string/course_wishlist"
+        android:text="COURSE WISHLIST"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
@@ -86,7 +85,7 @@
         android:autofillHints=""
         android:ems="10"
         android:fontFamily="@font/ubuntu_bold"
-        android:text="@string/courses_taken"
+        android:text="COURSES TAKEN"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
