--- a/app/src/main/res/layout/fragment_student.xml
+++ b/app/src/main/res/layout/fragment_student.xml
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@id/timeline"
+        app:layout_constraintBottom_toTopOf="@id/button_timeline"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0"
         tools:layout_editor_absoluteX="16dp"
@@ -82,29 +82,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-
-                <TextView
-                    android:id="@+id/text_taken"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:autofillHints=""
-                    android:ems="10"
-                    android:fontFamily="@font/ubuntu_bold"
-                    android:text="COURSES TAKEN"
-                    android:textAlignment="center"
-                    android:textColor="#FFFFFF"
-                    android:textSize="20sp" />
-
-                <ScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/taken"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginHorizontal="10dp" />
-                </ScrollView>
             </LinearLayout>
 
         </LinearLayout>
@@ -136,7 +113,16 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/timeline"
+        android:id="@+id/button_taken"
+        android:layout_width="132dp"
+        android:layout_height="60dp"
+        android:text="courses taken"
+        app:layout_constraintBottom_toTopOf="@id/button_timeline"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <Button
+        android:id="@+id/button_timeline"
         android:layout_width="132dp"
         android:layout_height="60dp"
         android:layout_marginBottom="40dp"
@@ -155,7 +141,7 @@
         android:layout_marginBottom="40dp"
         android:text="want"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/timeline" />
+        app:layout_constraintRight_toLeftOf="@id/button_timeline" />
 
     <Button
         android:id="@+id/test_take"
@@ -164,6 +150,6 @@
         android:layout_marginBottom="40dp"
         android:text="take"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/timeline" />
+        app:layout_constraintLeft_toRightOf="@id/button_timeline" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
