--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,6 +10,11 @@
         android:label="Courses Taken"
         tools:layout="@layout/fragment_taken" />
     <fragment
+        android:id="@+id/AdminFragment"
+        android:name="com.example.b07.AdminFragment"
+        android:label="Admin Home"
+        tools:layout="@layout/fragment_admin" />
+    <fragment
         android:id="@+id/LoginFragment"
         android:name="com.example.b07.LoginFragment"
         android:label="Login"
@@ -17,6 +22,9 @@
         <action
             android:id="@+id/action_Login_to_Student"
             app:destination="@id/StudentFragment" />
+        <action
+            android:id="@+id/action_Login_to_Admin"
+            app:destination="@id/AdminFragment" />
     </fragment>
 
     <fragment
