--- a/app/src/main/res/layout/fragment_student.xml
+++ b/app/src/main/res/layout/fragment_student.xml
@@ -122,6 +122,7 @@
             android:id="@+id/taken"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            tools:listitem="@layout/fragment_course"
             android:layout_marginHorizontal="10dp" />
 
     </LinearLayout>
